--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,7 @@ android {
     }
     buildFeatures{
         viewBinding true
+        dataBinding true
     }
 
     compileOptions {
@@ -52,11 +53,11 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui-ktx:2.4.1'
     //Room
     implementation "androidx.room:room-ktx:2.4.1"
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.0'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.1'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1'
     kapt "androidx.room:room-compiler:2.4.1"
     androidTestImplementation "androidx.room:room-testing:2.4.1"
-    
+
     //Retrofit
 
 
